--- a/src/reservasUsuario/reservasUsuarioFXML.fxml
+++ b/src/reservasUsuario/reservasUsuarioFXML.fxml
@@ -3,75 +3,79 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.reservasUsuarioFXMLController">
-   <bottom>
-      <HBox alignment="BOTTOM_RIGHT" prefHeight="46.0" prefWidth="622.0" BorderPane.alignment="CENTER">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="429.0" prefWidth="665.0" style="-fx-background-color: #f0fff0;" stylesheets="@../reserva/reservarcss.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.reservasUsuarioFXMLController">
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="GoBack" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#goback" text="Go Back" textAlignment="RIGHT">
-               <HBox.margin>
-                  <Insets bottom="20.0" right="30.0" />
-               </HBox.margin>
-            </Button>
-         </children>
-      </HBox>
-   </bottom>
-   <top>
-      <VBox prefHeight="88.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+            <HBox alignment="CENTER" prefHeight="77.0" prefWidth="538.0">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Reservas">
-                     <VBox.margin>
-                        <Insets bottom="20.0" />
-                     </VBox.margin></Text>
-                  <Pane prefHeight="38.0" prefWidth="600.0" />
-                  <HBox prefHeight="118.0" prefWidth="600.0">
+                  <Label prefHeight="17.0" prefWidth="71.0" text="Fecha:" />
+                  <DatePicker fx:id="picker" editable="false" onAction="#inicializarTableView" />
+                  <Text fx:id="errorHora" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="67.99999761581421">
+                     <HBox.margin>
+                        <Insets left="5.0" />
+                     </HBox.margin>
+                  </Text>
+                  <Button id="aceptar" fx:id="eliminar" mnemonicParsing="false" onAction="#eliminarReserva" text="Eliminar Reserva" />
+               </children>
+            </HBox>
+            <VBox alignment="CENTER" prefHeight="266.0" prefWidth="459.0">
+               <children>
+                  <Label text="Reservas" />
+                  <TableView fx:id="ReservasUser" maxWidth="-Infinity" prefHeight="152.0" prefWidth="523.0">
+                    <columns>
+                        <TableColumn fx:id="HoraColumn" minWidth="0.0" prefWidth="120.666628241539" resizable="false" text="HORA" />
+                      <TableColumn fx:id="PistaColumn" prefWidth="131.3333282470703" resizable="false" text="PISTA" />
+                        <TableColumn prefWidth="106.66667175292969" resizable="false" text="PAGADA" />
+                      <TableColumn fx:id="DiaColumn" prefWidth="164.66671752929688" resizable="false" text="REALIZACIÓN RESERVA" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+                  <HBox alignment="CENTER" prefHeight="48.0" prefWidth="482.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Fecha reservada: " />
-                        <DatePicker fx:id="picker" editable="false" onAction="#inicializarTableView" />
-                        <Text fx:id="errorHora" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0">
+                        <Pane prefHeight="48.0" prefWidth="443.0" />
+                        <Button fx:id="GoBack" alignment="CENTER_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#goback" text="Volver" textAlignment="RIGHT">
                            <HBox.margin>
-                              <Insets left="5.0" />
+                              <Insets bottom="20.0" right="30.0" />
                            </HBox.margin>
-                        </Text>
-                        <Button fx:id="eliminar" mnemonicParsing="false" onAction="#eliminarReserva" text="Eliminar Reserva" />
+                        </Button>
                      </children>
                      <VBox.margin>
-                        <Insets bottom="10.0" />
+                        <Insets top="10.0" />
                      </VBox.margin>
                   </HBox>
                </children>
             </VBox>
          </children>
       </VBox>
-   </top>
-   <center>
-      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+   </center>
+   <top>
+      <HBox alignment="CENTER" prefHeight="79.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox minWidth="-Infinity" prefHeight="266.0" prefWidth="459.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Pista 1" />
-                  <TableView fx:id="ReservasUser" prefHeight="200.0" prefWidth="370.0">
-                    <columns>
-                      <TableColumn fx:id="PistaColumn" prefWidth="100.0" text="PISTA" />
-                      <TableColumn fx:id="DiaColumn" prefWidth="100.0" text="DIA" />
-                        <TableColumn fx:id="HoraColumn" minWidth="0.0" prefWidth="100.0" text="HORA" />
-                    </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TableView>
-               </children>
-            </VBox>
+            <Label text="Mis reservas">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Label>
          </children>
       </HBox>
-   </center>
+   </top>
+   <left>
+      <Pane prefHeight="321.0" prefWidth="57.0" BorderPane.alignment="CENTER" />
+   </left>
+   <right>
+      <Pane prefHeight="321.0" prefWidth="70.0" BorderPane.alignment="CENTER" />
+   </right>
 </BorderPane>
