--- a/src/reservasUsuario/reservasUsuarioFXML.fxml
+++ b/src/reservasUsuario/reservasUsuarioFXML.fxml
@@ -19,7 +19,7 @@
          <children>
             <HBox alignment="CENTER" prefHeight="77.0" prefWidth="538.0">
                <children>
-                  <Label prefHeight="17.0" prefWidth="71.0" text="Fecha:" />
+                  <Label fx:id="fecha_txt" prefHeight="17.0" prefWidth="71.0" text="Fecha:" />
                   <DatePicker fx:id="picker" editable="false" onAction="#inicializarTableView" />
                   <Text fx:id="errorHora" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="67.99999761581421">
                      <HBox.margin>
@@ -34,10 +34,10 @@
                   <Label text="Reservas" />
                   <TableView fx:id="ReservasUser" maxWidth="-Infinity" prefHeight="152.0" prefWidth="523.0">
                     <columns>
-                        <TableColumn fx:id="HoraColumn" minWidth="0.0" prefWidth="120.666628241539" resizable="false" text="HORA" />
-                      <TableColumn fx:id="PistaColumn" prefWidth="131.3333282470703" resizable="false" text="PISTA" />
-                        <TableColumn prefWidth="106.66667175292969" resizable="false" text="PAGADA" />
-                      <TableColumn fx:id="DiaColumn" prefWidth="164.66671752929688" resizable="false" text="REALIZACIÓN RESERVA" />
+                        <TableColumn fx:id="horaColumn" minWidth="0.0" prefWidth="120.666628241539" resizable="false" text="HORA" />
+                      <TableColumn fx:id="pistaColumn" prefWidth="131.3333282470703" resizable="false" text="PISTA" />
+                        <TableColumn fx:id="pagadaColumn" prefWidth="106.66667175292969" resizable="false" text="PAGADA" />
+                      <TableColumn fx:id="diaColumn" prefWidth="164.66671752929688" resizable="false" text="FECHA" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
