--- a/src/reserva/reservaFXML.fxml
+++ b/src/reserva/reservaFXML.fxml
@@ -65,7 +65,7 @@
                   <VBox prefHeight="212.0" prefWidth="130.0">
                      <children>
                         <Label text="Pista 1" />
-                        <ListView fx:id="lvPista1" prefHeight="230.0" prefWidth="100.0">
+                        <ListView fx:id="lvPista1" focusTraversable="false" prefHeight="230.0" prefWidth="100.0">
                            <VBox.margin>
                               <Insets right="5.0" />
                            </VBox.margin></ListView>
@@ -74,7 +74,7 @@
                   <VBox prefHeight="200.0" prefWidth="130.0">
                      <children>
                         <Label text="Pista 2" />
-                        <ListView fx:id="lvPista2" prefHeight="230.0" prefWidth="200.0">
+                        <ListView fx:id="lvPista2" focusTraversable="false" prefHeight="230.0" prefWidth="200.0">
                            <VBox.margin>
                               <Insets right="5.0" />
                            </VBox.margin></ListView>
@@ -83,7 +83,7 @@
                   <VBox prefHeight="200.0" prefWidth="130.0">
                      <children>
                         <Label text="Pista 3" />
-                        <ListView fx:id="lvPista3" prefHeight="230.0" prefWidth="200.0">
+                        <ListView fx:id="lvPista3" focusTraversable="false" prefHeight="230.0" prefWidth="200.0">
                            <VBox.margin>
                               <Insets right="5.0" />
                            </VBox.margin></ListView>
@@ -92,7 +92,7 @@
                   <VBox prefHeight="200.0" prefWidth="130.0">
                      <children>
                         <Label text="Pista 4" />
-                        <ListView fx:id="lvPista4" prefHeight="230.0" prefWidth="200.0">
+                        <ListView fx:id="lvPista4" focusTraversable="false" prefHeight="230.0" prefWidth="200.0">
                            <VBox.margin>
                               <Insets right="5.0" />
                            </VBox.margin></ListView>
@@ -101,7 +101,7 @@
                   <VBox prefHeight="200.0" prefWidth="130.0">
                      <children>
                         <Label text="Pista 5" />
-                        <ListView fx:id="lvPista5" prefHeight="230.0" prefWidth="200.0">
+                        <ListView fx:id="lvPista5" focusTraversable="false" prefHeight="230.0" prefWidth="200.0">
                            <VBox.margin>
                               <Insets right="5.0" />
                            </VBox.margin></ListView>
@@ -110,7 +110,7 @@
                   <VBox prefHeight="200.0" prefWidth="130.0">
                      <children>
                         <Label text="Pista 6" />
-                        <ListView fx:id="lvPista6" prefHeight="230.0" prefWidth="200.0" />
+                        <ListView fx:id="lvPista6" focusTraversable="false" prefHeight="230.0" prefWidth="200.0" />
                      </children>
                   </VBox>
                </children>
