--- a/src/reserva/reservarcss.css
+++ b/src/reserva/reservarcss.css
@@ -49,3 +49,16 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     -fx-text-fill:black;  
     -fx-background-radius: 2px;
 }
+.list-cell:filled:selected:focused,
+.list-cell:filled:selected,
+.list-cell:even,
+.list-cell:odd {
+  -fx-background-color: transparent;
+}
+
+.table-row-cell:filled:selected:focused,
+.table-row-cell:filled:selected,
+.table-row-cell:even,
+.table-row-cell:odd {
+  -fx-background-color: transparent;
+}
