--- a/src/reservasUsuario/reservasUsuarioFXML.fxml
+++ b/src/reservasUsuario/reservasUsuarioFXML.fxml
@@ -29,19 +29,16 @@
                   <Button id="aceptar" fx:id="eliminar" mnemonicParsing="false" onAction="#eliminarReserva" text="Eliminar Reserva" />
                </children>
             </HBox>
-            <VBox alignment="CENTER" prefHeight="266.0" prefWidth="459.0">
+            <VBox alignment="CENTER" prefHeight="266.0" prefWidth="592.0">
                <children>
                   <Label text="Reservas" />
-                  <TableView fx:id="ReservasUser" maxWidth="-Infinity" prefHeight="152.0" prefWidth="523.0">
+                  <TableView fx:id="ReservasUser" focusTraversable="false" maxWidth="-Infinity" prefHeight="152.0" prefWidth="553.0">
                     <columns>
+                      <TableColumn fx:id="diaColumn" prefWidth="162.40005493164062" resizable="false" text="FECHA" />
                         <TableColumn fx:id="horaColumn" minWidth="0.0" prefWidth="120.666628241539" resizable="false" text="HORA" />
-                      <TableColumn fx:id="pistaColumn" prefWidth="131.3333282470703" resizable="false" text="PISTA" />
-                        <TableColumn fx:id="pagadaColumn" prefWidth="106.66667175292969" resizable="false" text="PAGADA" />
-                      <TableColumn fx:id="diaColumn" prefWidth="164.66671752929688" resizable="false" text="FECHA" />
+                      <TableColumn fx:id="pistaColumn" prefWidth="140.79998779296875" resizable="false" text="PISTA" />
+                        <TableColumn fx:id="pagadaColumn" prefWidth="128.00002441406252" resizable="false" text="PAGADA" />
                     </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
                   </TableView>
                   <HBox alignment="CENTER" prefHeight="48.0" prefWidth="482.0">
                      <children>
@@ -76,6 +73,6 @@
       <Pane prefHeight="321.0" prefWidth="57.0" BorderPane.alignment="CENTER" />
    </left>
    <right>
-      <Pane prefHeight="321.0" prefWidth="70.0" BorderPane.alignment="CENTER" />
+      <Pane prefHeight="350.0" prefWidth="50.0" BorderPane.alignment="CENTER" />
    </right>
 </BorderPane>
